# code2board

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/expected_outputs/: README.md
examples/materials/: beginner_arduino_kit.json  esp32_iot_kit.json  pico_sensor_kit.json  stm32_basic_kit.json
examples/requests/: line_follower.txt  obstacle_avoider.txt  smart_greenhouse.txt  traffic_light.txt
robomentor/: __init__.py  board_profiles.py  circuit_generator.py  cli.py  code_generator.py  config.py  material_parser.py  metrics.py  part_library.py  planner.py  project_io.py  report.py  schemas.py  utils.py
robomentor/agents/: __init__.py  base_agent.py  circuit_agent.py  code_agent.py  debug_agent.py  explanation_agent.py  planner_agent.py
robomentor/llm/: __init__.py  anthropic_provider.py  base.py  groq_provider.py  heuristic_llm.py  ollama_provider.py  openai_provider.py
robomentor/renderers/: __init__.py  circuit_plotter.py  graphviz_renderer.py  html_report.py  markdown_report.py
robomentor/simulators/: __init__.py  base.py  local_static.py  wokwi_cli.py  wokwi_python_client.py
robomentor/validators/: __init__.py  base.py  code_circuit_validator.py  educational_safety_validator.py  pin_validator.py  power_validator.py  wokwi_validator.py
skills/robo-mentor/: SKILL.md
skills/robo-mentor/examples/: beginner_materials.json  project_request.txt
tests/: test_cli_smoke.py  test_code_circuit_validator.py  test_material_parser.py  test_pin_validator.py  test_power_validator.py  test_wokwi_generation.py
