[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robomentor"
version = "0.1.0"
description = "Material-aware LLM-agent toolchain for high school robotics education"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "RoboMentor Contributors" }
]
keywords = ["robotics", "education", "arduino", "esp32", "wokwi", "stm32", "agent", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Education",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
]

# Core runtime works with ZERO of these installed (graceful fallback everywhere).
# They only unlock higher-quality renders / optional providers.
dependencies = []

[project.optional-dependencies]
render = ["matplotlib>=3.5", "networkx>=2.6"]
graphviz = ["graphviz>=0.20"]
yaml = ["PyYAML>=6.0"]
cli = ["typer>=0.9"]
html = ["jinja2>=3.0"]
llm = ["requests>=2.28"]
dev = ["pytest>=7.0", "matplotlib>=3.5", "networkx>=2.6"]
all = [
    "matplotlib>=3.5",
    "networkx>=2.6",
    "graphviz>=0.20",
    "PyYAML>=6.0",
    "typer>=0.9",
    "jinja2>=3.0",
    "requests>=2.28",
    "pytest>=7.0",
]

[project.scripts]
robomentor = "robomentor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["robomentor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
